Fixed misconfiguration with the left and right top borders on mobile

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -448,7 +448,7 @@ textarea {
     overflow: auto; 
   }
 
-    div[part='button'], div[class='flex flex-row items-center w-full h-[50px] absolute top-0 left-0 z-10'], .chatbot-container {
+    div[part='button'], div[class='flex flex-row items-center w-full h-[50px] absolute top-0 left-0 z-10'], .chatbot-container, .rounded-lg {
     border-radius: 0px !important;
   }
 
